2009-12-10  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	* h5_handler.h is renamed to hdf5_handler.h and is cleaned-up.

2009-10-02  H. Joe Lee  <hyoklee@hdfgroup.org>

	Added support for HDF5 dimension scale.
	Added support for HDF-EOS5 OMI swath.

2009-03-18  Patrick West <pwest@ucar.edu>

	Memory allocation issues cleaned up
	M    hdf5_handler-1.3.0/HDF5Array.cc
	M    hdf5_handler-1.3.0/HDF5Str.cc
	M    hdf5_handler-1.3.0/HDF5Int32.cc
	M    hdf5_handler-1.3.0/HDF5Int16.cc
	M    hdf5_handler-1.3.0/HDF5Byte.cc
	M    hdf5_handler-1.3.0/HDF5Float64.cc

2009-03-18  Patrick West <pwest@ucar.edu>

	Memory cleanup issues
	M    hdf5_handler-1.3.0/HDF5UInt32.cc
	M    hdf5_handler-1.3.0/HDF5UInt16.cc
	M    hdf5_handler-1.3.0/h5das.cc
	M    hdf5_handler-1.3.0/h5dds.cc
	M    hdf5_handler-1.3.0/H5Git.cc
	M    hdf5_handler-1.3.0/HDF5Float32.cc

2009-03-18  hyoklee

	Removed an unnecessary bound check. This is a fix for the test FAIL on bes-testsuite/bes-testsuite/besstandalone.h5/tcompound.h5.3.exp.

2009-03-16  James Gallagher <jgallagher@opendap.org>

	Code review.

	M    HDF5UInt32.cc
	M    HDF5Module.cc
	M    HDF5UInt16.cc
	M    h5das.cc
	M    h5dds.cc
	M    H5Git.cc
	M    HDF5Float32.cc
	M    HDF5Array.cc
	M    HDF5Str.cc
	M    HDF5Int32.cc
	M    HDF5Int16.cc
	M    HDF5Byte.cc
	M    HDF5Float64.cc
	M    HDF5Module.h

2009-03-08  Patrick West <pwest@ucar.edu>

	POST_CONSTRAINT issues with multiple containers. Call set_constraint on
	BESDapResponse in order to properly have the post constraint set.

	M    HDF5RequestHandler.cc

2009-03-08  Patrick West <pwest@ucar.edu>

	Added handles attribute to help response, specifying what services the
	module handles.

	M    HDF5RequestHandler.cc

2009-03-04  Patrick West <pwest@ucar.edu>

	container storage and catalog list reference changes
	
	M    hdf5_handler-1.3.0/HDF5Module.cc

2009-02-20  James Gallagher <jgallagher@opendap.org>

	Merged the xmlresponse branch with the Hyrax 1.5 release branch.

	_M   .
	M    HDF5Module.cc